--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "description": "RabbitMQ Wrapper Library For NodeJS",
   "scripts": {
-    "build": "tsc"
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "/dist"
@@ -13,6 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.33.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
