--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "@types/amqplib": "^0.10.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
+    "tsup": "^6.6.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
