--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix"
+    "lint:fix": "eslint src --ext .ts --fix",
+    "test": "ts-node src/test/testFile.ts"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -19,12 +20,14 @@
     "@types/amqplib": "^0.10.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "amqplib": "^0.10.3",
     "eslint": "^8.33.0",
+    "ts-node": "^10.9.1",
     "tsup": "^6.6.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "amqplib": "^0.10.3",
+    "amqp-connection-manager": "^4.1.10",
     "nodemon": "^2.0.20"
   },
   "repository": {
