--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "test": "ts-node src/test/testFile.ts"
+    "e2e": "ts-node e2e/manual-test.ts",
+    "test": ""
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
