--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@types/amqplib": "^0.10.1",
+    "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "amqplib": "^0.10.3",
