--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "e2e": "ts-node e2e/server-client.test.ts",
-    "test": ""
+    "test": "jest"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -19,18 +19,21 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@types/amqplib": "^0.10.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "amqplib": "^0.10.3",
     "eslint": "^8.33.0",
+    "jest": "^29.4.3",
     "ts-node": "^10.9.1",
     "tsup": "^6.6.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "amqp-connection-manager": "^4.1.10",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "zod": "^3.20.6"
   },
   "repository": {
     "type": "git",
