--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "e2e": "ts-node e2e/server-client.test.ts",
+    "e2e": "ts-node ./e2e/server-client.e2e.ts",
     "test": "jest"
   },
   "main": "dist/index.js",
@@ -26,6 +26,7 @@
     "amqplib": "^0.10.3",
     "eslint": "^8.33.0",
     "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsup": "^6.6.0",
     "typescript": "^4.9.5"
