--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
     "outDir": "./dist",
     "skipLibCheck": true,
     "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "e2e/**/*"
   ]
 }
