--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "e2e": "ts-node ./e2e/server-client.e2e.ts",
-    "test": "jest"
+    "test": "jest",
+    "initRabbit": "ts-node ./src/Init/init.ts"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -25,7 +26,10 @@
     "@typescript-eslint/parser": "^5.51.0",
     "amqplib": "^0.10.3",
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
+    "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsup": "^6.6.0",
