Set up jest (#4)
* Set up jest

Signed-off-by: Hubert Siwkin <hsiwkin@beesafe.pl>

* TS fixes

Signed-off-by: Hubert Siwkin <hsiwkin@beesafe.pl>

* Add client tests

Signed-off-by: Hubert Siwkin <hsiwkin@beesafe.pl>

* Add client & server tests

Signed-off-by: Hubert Siwkin <hsiwkin@beesafe.pl>

* Finished connection e2e tests

* Fix tests

Signed-off-by: Hubert Siwkin <hsiwkin@beesafe.pl>

---------

Signed-off-by: Hubert Siwkin <hsiwkin@beesafe.pl>
Co-authored-by: Baris Balli <barisbll.dev@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
     "outDir": "./dist",
     "skipLibCheck": true,
     "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "e2e/**/*"
   ]
 }
