--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "e2e": "ts-node e2e/server-client.test.ts",
-    "test": ""
+    "e2e": "ts-node ./e2e/server-client.e2e.ts",
+    "test": "jest",
+    "initRabbit": "ts-node ./src/Init/init.ts"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -19,18 +20,25 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@types/amqplib": "^0.10.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "amqplib": "^0.10.3",
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.4.3",
+    "prettier": "^2.8.4",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsup": "^6.6.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "amqp-connection-manager": "^4.1.10",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "zod": "^3.20.6"
   },
   "repository": {
     "type": "git",
