--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/amqplib": "^0.10.1",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "amqplib": "^0.10.3",
@@ -38,6 +39,7 @@
   "dependencies": {
     "amqp-connection-manager": "^4.1.10",
     "nodemon": "^2.0.20",
+    "uuid": "^9.0.0",
     "zod": "^3.20.6"
   },
   "repository": {
