--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -33,5 +33,22 @@ jobs:
         uses: pnpm/action-setup@v2.2.4
         with:
           version: 7
+      - name: Start RabbitMQ
+        uses: namoshek/rabbitmq-github-action@v1
+        with:
+          version: 'latest'
+          container-name: mqtt
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
       - run: pnpm install
-      - run: pnpm test
+      - run: pnpm e2e:all
