--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "e2e": "ts-node ./e2e/server-client.e2e.ts",
-    "e2e-rpc": "ts-node ./e2e/rpc.e2e.ts",
-    "e2e-rpc-multiple": "ts-node ./e2e/rpc-multiple.e2e.ts",
-    "e2e-rpc-unknown-replies": "ts-node ./e2e/rpc-unknown-replies.e2e.ts",
-    "e2e-experimental-rabbit-debug": "ts-node ./e2e/rpc-experimental.e2e.ts --inspect",
-    "test": "jest",
+    "e2e:rpc": "ts-node ./e2e/rpc.e2e.ts",
+    "e2e:rpc-multiple": "ts-node ./e2e/rpc-multiple.e2e.ts",
+    "e2e:rpc-unknown-replies": "ts-node ./e2e/rpc-unknown-replies.e2e.ts",
+    "e2e:experimental-rabbit-debug": "ts-node ./e2e/rpc-experimental.e2e.ts --inspect",
+    "e2e:all": "jest ./e2e",
+    "test": "jest ./src",
     "initRabbit": "ts-node ./src/Init/init.ts"
   },
   "main": "dist/index.js",
