--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           version: 'latest'
           container-name: mqtt
+          ports: 5672:5672
       - name: Get pnpm store directory
         id: pnpm-cache
         shell: bash
