--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Rabbit e2e tests
+name: Push Request Workflow
 
 on:
   pull_request:
@@ -35,6 +35,9 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm install
-      - run: pnpm test
-      - run: pnpm e2e:all
+      - name: Install dependencies
+        run: pnpm install
+      - name: Run unit tests
+        run: pnpm test
+      - name: Run e2e tests
+        run: pnpm e2e:all
