--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsup": "^6.6.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "winston": "^3.8.2"
   },
   "dependencies": {
     "amqp-connection-manager": "^4.1.10",
