--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "amqp-connection-manager": "^4.1.13",
+    "chalk": "^4.1.2",
     "colors": "^1.4.0",
     "eslint-plugin-prettier": "^4.2.1",
     "events": "^3.3.0",
