--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nodemon": "^2.0.22",
     "pino": "^8.14.1",
     "pino-pretty": "^10.0.0",
+    "r4bbit": "link:",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
