--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      - name: Run unit tests
-        run: pnpm test
-      - name: Run e2e tests
-        run: pnpm e2e:all
+      # - name: Run unit tests
+      #   run: pnpm test
+      # - name: Run e2e tests
+      #   run: pnpm e2e:all
