--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,7 @@ env:
 extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
+  - prettier
 overrides: []
 parser: '@typescript-eslint/parser'
 parserOptions:
@@ -11,16 +12,9 @@ parserOptions:
   sourceType: module
 plugins:
   - '@typescript-eslint'
+  - unused-imports
+  - prettier
 rules:
-  indent:
-    - error
-    - 2
-  linebreak-style:
-    - error
-    - unix
-  quotes:
-    - error
-    - single
-  semi:
-    - error
-    - always
+  unused-imports/no-unused-imports-ts: error
+  prettier/prettier: error
+ignorePatterns: ['**/dist']
