--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "@rabbit-wrapper/wrapper",
+  "name": "r4bbit",
   "version": "0.0.1",
   "description": "RabbitMQ Wrapper Library For NodeJS",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
+    "release": "pnpm run build && changeset publish",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "e2e": "ts-node e2e/server-client.test.ts",
-    "test": ""
+    "e2e": "ts-node ./e2e/server-client.e2e.ts",
+    "e2e:rpc": "ts-node ./e2e/rpc.e2e.ts",
+    "e2e:rpc-multiple": "ts-node ./e2e/rpc-multiple.e2e.ts",
+    "e2e:rpc-unknown-replies": "ts-node ./e2e/rpc-unknown-replies.e2e.ts",
+    "e2e:experimental-rabbit-debug": "ts-node ./e2e/rpc-experimental.e2e.ts --inspect",
+    "e2e:all": "jest --forceExit ./e2e",
+    "test": "jest ./src",
+    "initRabbit": "ts-node ./src/Init/init.ts"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -17,20 +24,39 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@changesets/cli": "^2.26.0",
+    "@changesets/cli": "^2.26.1",
     "@types/amqplib": "^0.10.1",
-    "@types/node": "^18.14.0",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "amqplib": "^0.10.3",
-    "eslint": "^8.33.0",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "tsup": "^6.6.0",
-    "typescript": "^4.9.5"
+    "tsup": "^7.0.0",
+    "typescript": "^5.1.3",
+    "winston": "^3.9.0"
   },
   "dependencies": {
-    "amqp-connection-manager": "^4.1.10",
-    "nodemon": "^2.0.20"
+    "amqp-connection-manager": "^4.1.13",
+    "chalk": "^4.1.2",
+    "colors": "^1.4.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "events": "^3.3.0",
+    "nanoid": "^3.3.6",
+    "nodemon": "^2.0.22",
+    "pino": "^8.14.1",
+    "pino-pretty": "^10.0.0",
+    "r4bbit": "link:",
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4"
   },
   "repository": {
     "type": "git",
