--- a/examples/client-server/package.json
+++ b/examples/client-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "r4bbit-simple-example",
+  "name": "r4bbit-client-server-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
