--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Run unit tests
         run: pnpm test
-      # - name: Run e2e tests
-      #   run: pnpm e2e:all
+      - name: Run e2e tests
+        run: pnpm e2e:all
