--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "e2e:experimental-rabbit-debug": "ts-node ./e2e/rpc-experimental.e2e.ts --inspect",
     "e2e:all": "jest --forceExit ./e2e",
     "test": "jest ./src",
-    "initRabbit": "ts-node ./src/Init/init.ts"
+    "initRabbit": "ts-node ./src/Init/init.ts",
+    "prepare": "husky install"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -36,6 +37,7 @@
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
@@ -54,6 +56,7 @@
     "nodemon": "^2.0.22",
     "pino": "^8.14.1",
     "pino-pretty": "^10.0.0",
+    "r4bbit": "link:",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
